With some hacks, modularize the maven plugin